# pichu-clicker

./: Cargo.toml  test.clicks  test2.clicks
src/: button.rs  click_data.rs  click_recorder.rs  clicker.rs  cps.rs  delay.rs  hot_key.rs  main.rs  pichu_clicker.rs
